fix header button size on mobile device

--- a/Resources/css/querries.css
+++ b/Resources/css/querries.css
@@ -40,6 +40,10 @@
 }
 @media screen and (max-width: 767px) {
   .section-header {
+    font-size: 1rem;
+    background-attachment: initial;
+  }
+  .header-text a {
     font-size: 0.8rem;
   }
   section {
